--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Pixel Art Canvas</h1>
-    <div id="pixel-canvas"></div>
-    <div id="color-picker">
-        <label for="color">Pick a color:</label>
-        <input type="color" id="color" value="#ff0000">
+    <div class="container">
+        <h1>🎨 Pixel Art Canvas</h1>
+        <div id="pixel-canvas"></div>
+        <div class="controls">
+            <label for="color">Pick a Color:</label>
+            <input type="color" id="color" value="#ff0000">
+            <button id="clear-canvas">Clear Canvas</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
-<button id="clear-canvas">Clear Canvas</button>
